--- a/admin/tsconfig.server.json
+++ b/admin/tsconfig.server.json
@@ -5,7 +5,7 @@
     // "target": "es2017",
     "jsx": "preserve",
     "lib": ["DOM", "DOM.Iterable", "ES2017", "ESNext"],
-    "baseUrl": ".",
+    "baseUrl": "./",
     "moduleResolution": "node",
     "strict": true,
     "allowJs": true,
@@ -36,18 +36,18 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
     "paths": {
-      "@api/*": ["./src/api/*"],
-      "@redux/*": ["./src/redux/*"],
-      "@store/*": ["./src/store/*"],
-      "@uikit/*": ["./src/components/UIKit/*"],
-      "@components/*": ["./src/components/*"],
-      "@src/*": ["./src/*"],
-      "@server/*": ["./server/*"],
-      "@pages/*": ["./pages/*"],
-      "@public/*": ["./public/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@type/*": ["./src/type/*"],
-      "@utils/*": ["./src/utils/*"]
+      "@api/*": ["src/api/*"],
+      "@redux/*": ["src/redux/*"],
+      "@store/*": ["src/store/*"],
+      "@uikit/*": ["src/components/UIKit/*"],
+      "@components/*": ["src/components/*"],
+      "@src/*": ["src/*"],
+      "@server/*": ["server/*"],
+      "@pages/*": ["pages/*"],
+      "@public/*": ["public/*"],
+      "@lib/*": ["src/lib/*"],
+      "@type/*": ["src/type/*"],
+      "@utils/*": ["src/utils/*"]
     }
   },
   "ts-node": { "files": true }
