--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "kill-port 1111 && nodemon -x 'node ./src/app.js'"
+    "dev": "pm2 start ./src/app.js"
   },
   "engines": {
     "node": ">=8.0.0"
