--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unicorn": "^28.0.0",
+    "globby": "^11.0.2",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
     "parcel-bundler": "^1.12.4",
